# percolator-prog

./: .gitignore  Cargo.toml  README.md  audit.md  audit.toml  bench.md  bugs.md  debug-oracle.mjs  migrate-oracle.mjs  security.md  verification.md
.claude/worktrees/: percolator  percolator-match
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  kani-manual.yml  nightly.yml
benchmark-results/: PERC-156-CU-BENCHMARK-REPORT.md  PERC-200-CU-BASELINE-REPORT.md  PERC-200-POST-OPT-REPORT.md
deploy-artifacts/: README.md
docs/: PERC-283-pricing-engine-architecture.md  PERC-622-oracle-phase-transition.md  PERC-622-oracle-transition.md  PERC-623-keeper-fund.md  PERC-627-creator-stake-lock.md  PERC-628-shared-vault.md  PERC-629-dynamic-deposit.md  dispatch-walkthrough.md  phase19-tooling-pass.md  phase20-attack-scenarios.md
docs/audit/: 2026-03-11-kani-proof-quality.md  PERC-8404-init-shared-vault-admin-audit.md
examples/: sizes.rs
fb1b/: PHASE_B_FINAL_REPORT.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_account_parsing.rs  fuzz_instruction_decode.rs  fuzz_risk_params.rs  fuzz_slab_header.rs
scripts/: compare-trade-cu.sh  migrate-oracle-authority.sh  migrate-oracle-authority.sh.bak  migrate-oracle-authority.sh.bak2  proof-strength-audit-results.md  rebuild-deploy-devnet.sh  run-migrate-oracle.mjs  security.md
security-research/: session5.md
specs/: adl-migration-plan.md
src/: percolator.rs  spl_token.rs  tags.rs
tests/: cu_benchmark.rs  drift_detection.rs  e2e_simulation.rs  fuzz.rs  hyperp_oracle_tests.rs  hyperp_stress_tests.rs  i128_alignment.rs  insurance_lp_tests.rs  integration.rs  kani.rs  layout_canary.rs  pinocchio_cpi_parity.rs  position_nft_tests.rs  probe_offset.rs  test_a1_siphon_regression.rs  test_admin.rs  test_basic.rs  test_catchup_envelope.rs  test_chainlink_oracle.rs  test_conservation.rs  test_gap_t.rs  test_insurance.rs  test_oracle.rs  test_resolution.rs  test_risk_buffer.rs  test_security.rs  test_tradecpi.rs  trade_cu_benchmark.rs  unit.rs
tests/common/: mod.rs
