[package]
name = "percolator-prog"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/dcccrypto/percolator-prog"

[lib]
crate-type = ["cdylib", "lib"]
name = "percolator_prog"
path = "src/percolator.rs"

[features]
default = []
mainnet = []                    # Mainnet build — enables compile-time guards against test/devnet features
no-entrypoint = []
test-sbf = []
devnet = []                     # Relaxes oracle staleness/confidence checks — NEVER use with mainnet!
test = ["percolator/test"]      # MAX_ACCOUNTS=64 (~0.17 SOL)
small = ["percolator/small"]    # MAX_ACCOUNTS=256 (~0.68 SOL)
medium = ["percolator/medium"]  # MAX_ACCOUNTS=1024 (~2.7 SOL)
cu-audit = []                   # Enable compute unit checkpoints for CU auditing
unsafe_close = []               # TEST-ONLY: Skip all validation in CloseSlab instruction — NEVER use on mainnet!

[dependencies]
solana-program = "2.2.1"
pinocchio-token = "0.5.0"
spl-token-2022 = { version = "4.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.4.0" }
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
percolator = { git = "https://github.com/dcccrypto/percolator.git", rev = "cf35789" }
# NOTE: pinocchio, pyth-sdk-solana, arrayref, num-derive, num-traits, thiserror
# were removed — not used in source code.

# Pin crates that use edition2024 manifests (incompatible with cargo-build-sbf's cargo 1.79)
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
# spl-token retained as dev-dependency for test utilities (not a lib dependency)
spl-token = { version = "6.0", features = ["no-entrypoint"] }
bincode = "1"
solana-sdk = "2.2.1"
solana-client = "2.2.1"
rand = "0.8"
rand_xorshift = "0.3"
proptest = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3"
litesvm = "=0.6.1"
shellexpand = "3"
serde_json = "1"
